--- a/docker/Dockerfile.host
+++ b/docker/Dockerfile.host
@@ -1,10 +1,10 @@
 FROM python:3.13-alpine
-# Checar o porquê do slim está com warning
 
-RUN pip install flask socketio
+RUN apk add --no-cache gcc musl-dev python3-dev libffi-dev
 
 WORKDIR /app
+COPY . .
 
-COPY host /app/host
+RUN pip install --no-cache-dir flask socketio netifaces
 
-CMD ["python", "/app/host/host.py"]
+CMD ["python", "host.py"]
