--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,317 +1,121 @@
 services:
-  h1_1:
-    build: ./host
-    container_name: h1_1
-    image: ntw-algorithm-1-h1_1
+  router1:
+    # É a imagem que será build do router
+    build:
+      context: ./router
+      dockerfile: Dockerfile
     networks:
-      net_r1_h1:
-        ipv4_address: 172.16.10.100
-  h1_2:
-    build: ./host
-    container_name: h1_2
-    image: ntw-algorithm-1-h1_2
+      sn_6:
+        ipv4_address: 172.20.6.2 # É o router anterior
+      sn_2:
+        ipv4_address: 172.20.2.4 # É o router posterior
+      sn_1:
+        ipv4_address: 172.20.1.3 # É o router atual
+    # 'cap_add' é usado para adicionar capacidades do Linux ao container.
+    # Isso permite que o container realize operações privilegiadas específicas
+    # que não são concedidas por padrão. Use esta opção com cuidado, pois
+    # pode aumentar os riscos de segurança se mal utilizada.
+    cap_add:
+    - NET_ADMIN
+  router2:
+    build:
+      context: ./router
+      dockerfile: Dockerfile
     networks:
-      net_r1_h2:
-        ipv4_address: 172.16.11.100
-  r1:
-    build: ./router
-    container_name: r1
-    image: ntw-algorithm-1-r1
+      sn_1:
+        ipv4_address: 172.20.1.2
+      sn_3:
+        ipv4_address: 172.20.3.4
+      sn_2:
+        ipv4_address: 172.20.2.3
+    cap_add:
+    - NET_ADMIN
+  router3:
+    build:
+      context: ./router
+      dockerfile: Dockerfile
     networks:
-      net_r1_h1:
-        ipv4_address: 172.16.10.1
-      net_r1_h2:
-        ipv4_address: 172.16.11.1
-      p2p_r1_r2:
-        ipv4_address: 10.0.100.1
-      p2p_r1_r3:
-        ipv4_address: 10.0.101.1
-      p2p_r1_r4:
-        ipv4_address: 10.0.102.1
-      p2p_r1_r5:
-        ipv4_address: 10.0.103.1
-      p2p_r1_r6:
-        ipv4_address: 10.0.104.1
-  h2_1:
-    build: ./host
-    container_name: h2_1
-    image: ntw-algorithm-1-h2_1
+      sn_2:
+        ipv4_address: 172.20.2.2
+      sn_4:
+        ipv4_address: 172.20.4.4
+      sn_3:
+        ipv4_address: 172.20.3.3
+    cap_add:
+    - NET_ADMIN
+  router4:
+    build:
+      context: ./router
+      dockerfile: Dockerfile
     networks:
-      net_r2_h1:
-        ipv4_address: 172.16.12.100
-  h2_2:
-    build: ./host
-    container_name: h2_2
-    image: ntw-algorithm-1-h2_2
+      sn_3:
+        ipv4_address: 172.20.3.2
+      sn_5:
+        ipv4_address: 172.20.5.4
+      sn_4:
+        ipv4_address: 172.20.4.3
+    cap_add:
+    - NET_ADMIN
+  router5:
+    build:
+      context: ./router
+      dockerfile: Dockerfile
     networks:
-      net_r2_h2:
-        ipv4_address: 172.16.13.100
-  r2:
-    build: ./router
-    container_name: r2
-    image: ntw-algorithm-1-r2
+      sn_4:
+        ipv4_address: 172.20.4.2
+      sn_6:
+        ipv4_address: 172.20.6.4
+      sn_5:
+        ipv4_address: 172.20.5.3
+    cap_add:
+    - NET_ADMIN
+  router6:
+    build:
+      context: ./router
+      dockerfile: Dockerfile
     networks:
-      net_r2_h1:
-        ipv4_address: 172.16.12.1
-      net_r2_h2:
-        ipv4_address: 172.16.13.1
-      p2p_r1_r2:
-        ipv4_address: 10.0.100.2
-      p2p_r2_r4:
-        ipv4_address: 10.0.105.1
-      p2p_r2_r5:
-        ipv4_address: 10.0.106.1
-      p2p_r2_r6:
-        ipv4_address: 10.0.107.1
-  h3_1:
-    build: ./host
-    container_name: h3_1
-    image: ntw-algorithm-1-h3_1
-    networks:
-      net_r3_h1:
-        ipv4_address: 172.16.14.100
-  h3_2:
-    build: ./host
-    container_name: h3_2
-    image: ntw-algorithm-1-h3_2
-    networks:
-      net_r3_h2:
-        ipv4_address: 172.16.15.100
-  r3:
-    build: ./router
-    container_name: r3
-    image: ntw-algorithm-1-r3
-    networks:
-      net_r3_h1:
-        ipv4_address: 172.16.14.1
-      net_r3_h2:
-        ipv4_address: 172.16.15.1
-      p2p_r1_r3:
-        ipv4_address: 10.0.101.2
-      p2p_r3_r5:
-        ipv4_address: 10.0.108.1
-      p2p_r3_r6:
-        ipv4_address: 10.0.109.1
-  h4_1:
-    build: ./host
-    container_name: h4_1
-    image: ntw-algorithm-1-h4_1
-    networks:
-      net_r4_h1:
-        ipv4_address: 172.16.16.100
-  h4_2:
-    build: ./host
-    container_name: h4_2
-    image: ntw-algorithm-1-h4_2
-    networks:
-      net_r4_h2:
-        ipv4_address: 172.16.17.100
-  r4:
-    build: ./router
-    container_name: r4
-    image: ntw-algorithm-1-r4
-    networks:
-      net_r4_h1:
-        ipv4_address: 172.16.16.1
-      net_r4_h2:
-        ipv4_address: 172.16.17.1
-      p2p_r1_r4:
-        ipv4_address: 10.0.102.2
-      p2p_r2_r4:
-        ipv4_address: 10.0.105.2
-      p2p_r4_r5:
-        ipv4_address: 10.0.110.1
-      p2p_r4_r6:
-        ipv4_address: 10.0.111.1
-  h5_1:
-    build: ./host
-    container_name: h5_1
-    image: ntw-algorithm-1-h5_1
-    networks:
-      net_r5_h1:
-        ipv4_address: 172.16.18.100
-  h5_2:
-    build: ./host
-    container_name: h5_2
-    image: ntw-algorithm-1-h5_2
-    networks:
-      net_r5_h2:
-        ipv4_address: 172.16.19.100
-  r5:
-    build: ./router
-    container_name: r5
-    image: ntw-algorithm-1-r5
-    networks:
-      net_r5_h1:
-        ipv4_address: 172.16.18.1
-      net_r5_h2:
-        ipv4_address: 172.16.19.1
-      p2p_r1_r5:
-        ipv4_address: 10.0.103.2
-      p2p_r2_r5:
-        ipv4_address: 10.0.106.2
-      p2p_r3_r5:
-        ipv4_address: 10.0.108.2
-      p2p_r4_r5:
-        ipv4_address: 10.0.110.2
-      p2p_r5_r6:
-        ipv4_address: 10.0.112.1
-  h6_1:
-    build: ./host
-    container_name: h6_1
-    image: ntw-algorithm-1-h6_1
-    networks:
-      net_r6_h1:
-        ipv4_address: 172.16.20.100
-  h6_2:
-    build: ./host
-    container_name: h6_2
-    image: ntw-algorithm-1-h6_2
-    networks:
-      net_r6_h2:
-        ipv4_address: 172.16.21.100
-  r6:
-    build: ./router
-    container_name: r6
-    image: ntw-algorithm-1-r6
-    networks:
-      net_r6_h1:
-        ipv4_address: 172.16.20.1
-      net_r6_h2:
-        ipv4_address: 172.16.21.1
-      p2p_r1_r6:
-        ipv4_address: 10.0.104.2
-      p2p_r2_r6:
-        ipv4_address: 10.0.107.2
-      p2p_r3_r6:
-        ipv4_address: 10.0.109.2
-      p2p_r4_r6:
-        ipv4_address: 10.0.111.2
-      p2p_r5_r6:
-        ipv4_address: 10.0.112.2
+      sn_5:
+        ipv4_address: 172.20.5.2
+      sn_1:
+        ipv4_address: 172.20.1.4
+      sn_6:
+        ipv4_address: 172.20.6.3
+    cap_add:
+    - NET_ADMIN
 networks:
-  net_r1_h1:
+  sn_1:
     driver: bridge
     ipam:
       config:
-      - subnet: 172.16.10.0/24
-  net_r1_h2:
+      - subnet: 172.20.1.0/24
+        gateway: 172.20.1.1
+  sn_2:
     driver: bridge
     ipam:
       config:
-      - subnet: 172.16.11.0/24
-  net_r2_h1:
+      - subnet: 172.20.2.0/24
+        gateway: 172.20.2.1
+  sn_3:
     driver: bridge
     ipam:
       config:
-      - subnet: 172.16.12.0/24
-  net_r2_h2:
+      - subnet: 172.20.3.0/24
+        gateway: 172.20.3.1
+  sn_4:
     driver: bridge
     ipam:
       config:
-      - subnet: 172.16.13.0/24
-  net_r3_h1:
+      - subnet: 172.20.4.0/24
+        gateway: 172.20.4.1
+  sn_5:
     driver: bridge
     ipam:
       config:
-      - subnet: 172.16.14.0/24
-  net_r3_h2:
+      - subnet: 172.20.5.0/24
+        gateway: 172.20.5.1
+  sn_6:
     driver: bridge
     ipam:
       config:
-      - subnet: 172.16.15.0/24
-  net_r4_h1:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.16.16.0/24
-  net_r4_h2:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.16.17.0/24
-  net_r5_h1:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.16.18.0/24
-  net_r5_h2:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.16.19.0/24
-  net_r6_h1:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.16.20.0/24
-  net_r6_h2:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 172.16.21.0/24
-  p2p_r1_r2:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.100.0/30
-  p2p_r1_r3:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.101.0/30
-  p2p_r1_r4:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.102.0/30
-  p2p_r1_r5:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.103.0/30
-  p2p_r1_r6:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.104.0/30
-  p2p_r2_r4:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.105.0/30
-  p2p_r2_r5:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.106.0/30
-  p2p_r2_r6:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.107.0/30
-  p2p_r3_r5:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.108.0/30
-  p2p_r3_r6:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.109.0/30
-  p2p_r4_r5:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.110.0/30
-  p2p_r4_r6:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.111.0/30
-  p2p_r5_r6:
-    driver: bridge
-    ipam:
-      config:
-      - subnet: 10.0.112.0/30
+      - subnet: 172.20.6.0/24
+        gateway: 172.20.6.1
