--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
   router1:
+    environment:
+      - rtr_ip=172.20.1.3
     # É a imagem que será build do router
     build:
       context: ./router
@@ -18,6 +20,8 @@ services:
     cap_add:
     - NET_ADMIN
   router2:
+    environment:
+      - rtr_ip=172.20.2.3
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -31,6 +35,8 @@ services:
     cap_add:
     - NET_ADMIN
   router3:
+    environment:
+      - rtr_ip=172.20.3.3
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -44,6 +50,8 @@ services:
     cap_add:
     - NET_ADMIN
   router4:
+    environment:
+      - rtr_ip=172.20.4.3
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -57,6 +65,8 @@ services:
     cap_add:
     - NET_ADMIN
   router5:
+    environment:
+      - rtr_ip=172.20.5.3
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -70,6 +80,8 @@ services:
     cap_add:
     - NET_ADMIN
   router6:
+    environment:
+      - rtr_ip=172.20.6.3
     build:
       context: ./router
       dockerfile: Dockerfile
