--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   router1:
     environment:
+      - rtr_nome=ROUTER_1
       - rtr_ip=172.20.1.3
+      - vizinhanca={"ROUTER_6":["172.20.6.3",1],"ROUTER_2":["172.20.2.3",1]}
     # É a imagem que será build do router
     build:
       context: ./router
@@ -21,7 +23,9 @@ services:
     - NET_ADMIN
   router2:
     environment:
+      - rtr_nome=ROUTER_2
       - rtr_ip=172.20.2.3
+      - vizinhanca={"ROUTER_1":["172.20.1.3",1],"ROUTER_3":["172.20.3.3",1]}
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -36,7 +40,9 @@ services:
     - NET_ADMIN
   router3:
     environment:
+      - rtr_nome=ROUTER_3
       - rtr_ip=172.20.3.3
+      - vizinhanca={"ROUTER_2":["172.20.2.3",1],"ROUTER_4":["172.20.4.3",1]}
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -51,7 +57,9 @@ services:
     - NET_ADMIN
   router4:
     environment:
+      - rtr_nome=ROUTER_4
       - rtr_ip=172.20.4.3
+      - vizinhanca={"ROUTER_3":["172.20.3.3",1],"ROUTER_5":["172.20.5.3",1]}
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -66,7 +74,9 @@ services:
     - NET_ADMIN
   router5:
     environment:
+      - rtr_nome=ROUTER_5
       - rtr_ip=172.20.5.3
+      - vizinhanca={"ROUTER_4":["172.20.4.3",1],"ROUTER_6":["172.20.6.3",1]}
     build:
       context: ./router
       dockerfile: Dockerfile
@@ -81,7 +91,9 @@ services:
     - NET_ADMIN
   router6:
     environment:
+      - rtr_nome=ROUTER_6
       - rtr_ip=172.20.6.3
+      - vizinhanca={"ROUTER_5":["172.20.5.3",1],"ROUTER_1":["172.20.1.3",1]}
     build:
       context: ./router
       dockerfile: Dockerfile
