--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,6 +106,162 @@ services:
         ipv4_address: 172.20.6.3
     cap_add:
     - NET_ADMIN
+  host1_1:
+    environment:
+      - rtr_ip=172.20.1.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_1:
+        ipv4_address: 172.20.1.11
+    depends_on:
+    - router1
+    cap_add:
+    - NET_ADMIN
+  host1_2:
+    environment:
+      - rtr_ip=172.20.1.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_1:
+        ipv4_address: 172.20.1.12
+    depends_on:
+    - router1
+    cap_add:
+    - NET_ADMIN
+  host2_1:
+    environment:
+      - rtr_ip=172.20.2.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_2:
+        ipv4_address: 172.20.2.11
+    depends_on:
+    - router2
+    cap_add:
+    - NET_ADMIN
+  host2_2:
+    environment:
+      - rtr_ip=172.20.2.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_2:
+        ipv4_address: 172.20.2.12
+    depends_on:
+    - router2
+    cap_add:
+    - NET_ADMIN
+  host3_1:
+    environment:
+      - rtr_ip=172.20.3.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_3:
+        ipv4_address: 172.20.3.11
+    depends_on:
+    - router3
+    cap_add:
+    - NET_ADMIN
+  host3_2:
+    environment:
+      - rtr_ip=172.20.3.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_3:
+        ipv4_address: 172.20.3.12
+    depends_on:
+    - router3
+    cap_add:
+    - NET_ADMIN
+  host4_1:
+    environment:
+      - rtr_ip=172.20.4.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_4:
+        ipv4_address: 172.20.4.11
+    depends_on:
+    - router4
+    cap_add:
+    - NET_ADMIN
+  host4_2:
+    environment:
+      - rtr_ip=172.20.4.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_4:
+        ipv4_address: 172.20.4.12
+    depends_on:
+    - router4
+    cap_add:
+    - NET_ADMIN
+  host5_1:
+    environment:
+      - rtr_ip=172.20.5.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_5:
+        ipv4_address: 172.20.5.11
+    depends_on:
+    - router5
+    cap_add:
+    - NET_ADMIN
+  host5_2:
+    environment:
+      - rtr_ip=172.20.5.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_5:
+        ipv4_address: 172.20.5.12
+    depends_on:
+    - router5
+    cap_add:
+    - NET_ADMIN
+  host6_1:
+    environment:
+      - rtr_ip=172.20.6.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_6:
+        ipv4_address: 172.20.6.11
+    depends_on:
+    - router6
+    cap_add:
+    - NET_ADMIN
+  host6_2:
+    environment:
+      - rtr_ip=172.20.6.3
+    build:
+      context: ./host
+      dockerfile: Dockerfile
+    networks:
+      sn_6:
+        ipv4_address: 172.20.6.12
+    depends_on:
+    - router6
+    cap_add:
+    - NET_ADMIN
 networks:
   sn_1:
     driver: bridge
