--- a/host/Dockerfile
+++ b/host/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY host.py .
+COPY . .
 
-CMD ["python", "host.py"]
+RUN chmod +x /app/start.sh
+
+RUN apt-get update && apt-get install -y iproute2 iputils-ping net-tools
+
+CMD ["/app/start.sh"]
